--- a/app/src/main/res/layout/activity_registro_permiso_salida.xml
+++ b/app/src/main/res/layout/activity_registro_permiso_salida.xml
@@ -11,7 +11,7 @@
         android:id="@+id/tvTitulo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="30dp"
         android:gravity="center"
         android:paddingTop="30dp"
         android:text="Registro de salida de usuario"
@@ -24,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginBottom="50dp">
+        android:layout_marginBottom="30dp">
 
         <!-- Tipo de documento Label -->
         <LinearLayout
@@ -82,7 +82,7 @@
         android:text="CONSULTAR"
         android:textColor="@android:color/white"
         android:backgroundTint="#033657"
-        android:layout_marginBottom="50dp" />
+        android:layout_marginBottom="40dp" />
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
@@ -114,9 +114,25 @@
                 android:inputType="none"
                 android:focusable="false"
                 android:clickable="false"
-                android:layout_marginBottom="28dp"/>
+                android:layout_marginBottom="13dp"/>
 
+            <TextView
+                android:id="@+id/tvArea"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Área:"
+                android:textSize="14sp"
+                android:textColor="@android:color/black"
+                android:labelFor="@id/txtArea"/>
 
+            <EditText
+                android:id="@+id/txtArea"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:inputType="none"
+                android:focusable="false"
+                android:clickable="false"
+                android:layout_marginBottom="13dp"/>
             <TextView
                 android:id="@+id/tvDetallePermiso"
                 android:layout_width="wrap_content"
@@ -133,7 +149,7 @@
                 android:inputType="none"
                 android:focusable="false"
                 android:clickable="false"
-                android:layout_marginBottom="28dp"/>
+                android:layout_marginBottom="13dp"/>
 
             <TextView
                 android:id="@+id/tvMicromovilidad"
