--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -18,47 +18,42 @@
             android:layout_height="?attr/actionBarSize"
             android:background="#033F6B"
             app:title="SHEM"
-            app:titleTextColor="@android:color/white"
-            app:layout_scrollFlags="scroll|enterAlways" />
+            app:titleTextColor="@android:color/white" />
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
-            android:layout_height="130dp"
-            android:layout_marginTop="36dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:padding="8dp"
             android:fontFamily="sans-serif-condensed-medium"
             android:text="BIENVENIDO AL SISTEMA"
             android:textAlignment="center"
-            android:textSize="55sp"
-            android:typeface="normal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/nav_host_fragment_content_main" />
+            android:textColor="#033F6B"
+            android:textSize="50sp"
+            android:textStyle="bold" />
 
+        <!-- Subtitle TextView with better font size and color contrast -->
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
-            android:layout_height="109dp"
-            android:layout_marginTop="20dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
             android:fontFamily="sans-serif-medium"
-            android:text="Control de asistencia SHEM"
+            android:text="Control de Asistencia SHEM"
             android:textAlignment="center"
-            android:textSize="45sp"
-            android:typeface="normal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
-
+            android:textColor="#555555"
+            android:textSize="44sp" />
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="match_parent"
             android:layout_height="312dp"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="55dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.494"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2"
-            app:srcCompat="@drawable/image_principal" />
+            app:srcCompat="@drawable/bienvenida" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
