--- a/app/src/main/res/layout/activity_detalle_salida.xml
+++ b/app/src/main/res/layout/activity_detalle_salida.xml
@@ -17,6 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
         android:text="Estudiante"
+        android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="@color/black"
         android:textSize="40sp"
