--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -3,58 +3,73 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FEFEFE"
+    android:background="#3F5B77"
     tools:context=".vista.MenuPrincipalActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FFFFFF"
+        android:background="#3F5B77"
         android:fitsSystemWindows="true">
 
+        <!-- Toolbar con estilo profesional -->
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar_main"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="#033F6B"
+            android:background="#3F5B77"
             app:title="SHEM"
-            app:titleTextColor="@android:color/white" />
+            app:titleTextColor="@android:color/white"
+            android:elevation="4dp" />
 
+        <!-- Imagen centrada en la parte superior -->
+        <ImageView
+            android:id="@+id/topImage"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="15dp"
+            android:src="@drawable/logo_princi"
+            android:contentDescription="Logo"
+            android:layout_gravity="center" />
+
+        <!-- Texto de bienvenida con estilo mejorado -->
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:fontFamily="sans-serif-condensed-medium"
-            android:padding="8dp"
-            android:text="BIENVENIDO AL SISTEMA"
+            android:layout_marginTop="7dp"
+            android:fontFamily="sans-serif-condensed"
+            android:padding="4dp"
+            android:text="Bienvenido al Sistema SHEM"
             android:textAlignment="center"
-            android:textColor="#033F6B"
-            android:textSize="50sp"
+            android:textColor="#000000"
+            android:textSize="60sp"
             android:textStyle="bold" />
 
-        <!-- Subtitle TextView with better font size and color contrast -->
+        <!-- Subtítulo con estilo y mejor contraste -->
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:fontFamily="sans-serif-medium"
-            android:text="Control de Asistencia SHEM"
+            android:layout_marginTop="19dp"
+            android:fontFamily="sans-serif-light"
+            android:text="Control de Asistencia"
             android:textAlignment="center"
-            android:textColor="#555555"
-            android:textSize="44sp" />
+            android:textColor="#FFF7F7"
+            android:textSize="30sp" />
 
-        <ImageView
-            android:id="@+id/imageView3"
+        <!-- Hora local -->
+        <TextView
+            android:id="@+id/timeText"
             android:layout_width="match_parent"
-            android:layout_height="312dp"
-            android:layout_marginTop="55dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.494"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"
-            app:srcCompat="@drawable/bienvenida" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="34dp"
+            android:fontFamily="sans-serif-medium"
+            android:text="00:00:00"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="60sp" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
